# argus-due-diligence

./: .env.example  .gitignore  Makefile  README.md  constitution.md  policies.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
dashboard/: app.js  index.html  sources.html  styles.css
dashboard/data/: risk_profile.js  risk_profile.json
docs/: ARCHITECTURE.en.md  ARCHITECTURE.pt-br.md  COVERAGE.md
playbooks/: acquisition_target.md  new_supplier.md  strategic_partner.md
src/argus/: __init__.py  crew.py  demo.py  main.py  mock_sources.py
src/argus/config/: agents.yaml  tasks.yaml
src/argus/models/: __init__.py  risk_profile.py
src/argus/tools/: __init__.py  entity_consistency.py  financial_health.py  news_sentiment.py  red_flag_scorer.py
tests/: test_mock_sources.py  test_models.py  test_tools.py
